--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Danielle A. Ripsman
-logo: headshot_circle.png
+logo: 3800 Colour.jpg
 #description: text below image
 # show_downloads: true
 theme: jekyll-theme-minimal
