--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Danielle A. Ripsman
 logo: /assets/3800 Colour.jpg
 #description: text below image
 # show_downloads: true
-#theme: jekyll-theme-minimal
-theme: jekyll-theme-dinky
+theme: jekyll-theme-minimal
+#theme: jekyll-theme-dinky
