Update description in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Danielle A. Ripsman
 email: your-email@domain.com
-description: "Ph.D. in Management Science & Engineering. <br> Specializing in Operations Research and Radiation Therapy treatment planning."
+description: "Ph.D. in Management Science & Engineering <br> Operations Research | Healthcare Applications | Analytics & Optimization"
 baseurl: "" 
 url: "https://danirip.github.io"
 github_username: danirip
