Change email address in _config.yml
Updated email address in the configuration file.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Danielle A. Ripsman
-email: your-email@domain.com
+email: dripsma1 [at] jh.edu
 description: "Ph.D. in Management Science & Engineering <br> Operations Research | Healthcare Applications | Analytics & Optimization"
 baseurl: "" 
 url: "https://danirip.github.io"
