--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -99,7 +99,7 @@ conference:
 
 competitions:
   - title: "CORS Health Care Operational Research SIG Student Presentation Competition"
-    event: "CORS Conference"
+    location: "Saskatoon, SK"
     year: 2019
     award: "*Awarded first place"
   - title: "University of Waterloo Three Minute Thesis Competition"
