--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -99,11 +99,11 @@ conference:
 
 competitions:
   - title: "CORS Health Care Operational Research SIG Student Presentation Competition"
-    location: "Saskatoon, SK"
+    location: "Saskatoon, SK, Canada"
     year: 2019
     award: "*Awarded first place"
   - title: "University of Waterloo Three Minute Thesis Competition"
-    location: "Waterloo, Canada"
+    location: "Waterloo, ON, Canada"
     year: 2018
     link: "https://www.youtube.com/watch?v=iieDiuOiSVw"
     link_text: "Watch it here!"
