--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -105,6 +105,7 @@ competitions:
   - title: "University of Waterloo Three Minute Thesis Competition"
     location: "Waterloo, ON, Canada"
     year: 2018
+    youtube_id: "iieDiuOiSVw"
     link: "https://www.youtube.com/watch?v=iieDiuOiSVw"
     link_text: "Watch it here!"
     award: "*Selected as 3MT Finalist, represented the Management Sciences department"
