--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -23,4 +23,4 @@ ta_experience:
 
 distinctions:
   - title: "Sandford Fleming Foundation TA Award"
-    description: "In 2020 (denoted by a *), I was awarded the Sandford Fleming Foundation TA award for this course. My duties included adapting a weekly R programming lab (which I had originally prepared the curriculum for and taught live in 2019) to an online format, teaching, preparing instructions, videos, and grading. I was again given this award for the in-person 2022 year."
+    description: "In 2020 (denoted by a *), I was awarded the Sandford Fleming Foundation TA award for MSCI 251. My duties included adapting a weekly R programming lab (which I had originally prepared the curriculum for and taught live in 2019) to an online format, teaching, preparing instructions, videos, and grading. I was again given this award for the in-person 2022 year."
