--- a/_data/service.yml
+++ b/_data/service.yml
@@ -8,9 +8,9 @@
   role: "Designer"
   description: "During the pandemic, Kiefer Burgess and I got to design the \"conference centre\" for the CORS 2021 conference in Gather Town, pictured below!"
   images:
-    - src: "beacharea.png"
+    - src: "/assets/beacharea.png"
       alt: "Beach Area in Gather Town"
-    - src: "maingatherroom.png"
+    - src: "/assets/maingatherroom.png"
       alt: "Main Gather Room"
 
 - organization: "TORCH"
