--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -12,7 +12,7 @@
   year: 2023
   link: "http://doi.org/10.1002/mp.16298"
 
-- title: "Robust Direct Aperture Optimization for Radiation Therapy Treatment Planning"
+- title: "Robust direct aperture optimization for radiation therapy treatment planning"
   authors: "D. A. Ripsman, T. G. Purdie, T. C. Y. Chan, H. Mahmoudzadeh"
   journal: "INFORMS Journal on Computing"
   volume: "34(4):2017–2038"
