--- a/_data/service.yml
+++ b/_data/service.yml
@@ -6,7 +6,7 @@
 
 - organization: "Conference Centre Design"
   role: "Designer"
-  description: "During the pandemic, Kiefer Burgess and I got to design the \"conference centre\" for the CORS 2021 conference in Gather Town, pictured below!"
+  description: 'During the pandemic, <a href="https://www.linkedin.com/in/kieferburgess" target="_blank">Dr. Kiefer Burgess</a> and I got to design the "conference centre" for the CORS 2021 conference in Gather Town, pictured below!'
   images:
     - src: "/assets/MainGatherRoom.png"
       alt: "Beach Area in Gather Town"
