--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,20 +1,24 @@
-- organization: "CORS"
-  role: "Chapter Member/Leader"
-  description: "CORS is the Canadian Operations Research Society, which has local chapters all across Canada. I have been lucky enough to have worn many hats in our local chapter over the past 7 years."
-  link: "http://swontario.cors.ca/"
-  link_text: "See our local chapter website, which I upkeep!"
+- organization: "Canadian Operations Research Society (CORS)"
+  role: "National Student Councillor (2024–2025)"
+  description: |
+    Elected to represent the national student body, spearheading the post-pandemic reinvigoration of student chapters across Canada. Previously served in multiple leadership tiers, including <b>President of the South Western Ontario Student Chapter</b>. Led local membership growth by 200%, transitioned on-boarding processes, and managed digital presence for over seven years.
+  
+- organization: "The Operations Research Challenge (TORCH)"
+  role: "Founder & Competition Chair"
+  description: |
+    Founded and directed the University of Waterloo branch of this tri-university high school outreach competition. Oversaw the end-to-end development of contest mathematics, automated validators, and administrative infrastructure. Previously served as a long-term Executive at the University of Toronto branch, designing curriculum to introduce OR concepts to secondary students.
 
-- organization: "Conference Centre Design"
-  role: "Designer"
-  description: 'During the pandemic, <a href="https://www.linkedin.com/in/kieferburgess" target="_blank">Dr. Kiefer Burgess</a> and I got to design the "conference centre" for the CORS 2021 conference in Gather Town, pictured below!'
+- organization: "Conference Service & Digital Design"
+  role: "Lead Designer / Volunteer"
+  description: |
+    Collaborated on the architectural design of the virtual "Conference Centre" for CORS 2021 using Gather Town, creating an immersive digital environment for academic exchange during the pandemic. Served as a technical and session volunteer for the <b>INFORMS Computing Society (ICS)</b> conference (2024).
   images:
     - src: "/assets/MainGatherRoom.png"
       alt: "Main Gather Room"
     - src: "/assets/BeachArea.png"
       alt: "Beach Area in Gather Town"
 
-- organization: "TORCH"
-  role: "Founder/Organizer"
-  description: "The Operations Research Challenge or TORCH is an Operations Research competition for high school students. After helping run the competition as an undergrad at the University of Toronto, I was tapped to start a branch at the University of Waterloo. Unfortunately, it has not run since the pandemic hit in late 2019, but we are looking to get it off the ground once again, soon!"
-  link: "https://torch.uwaterloo.ca/"
-  link_text: "The TORCH website is here."
+- organization: "Management Sciences Student Association (MSSA)"
+  role: "Departmental Representative / President"
+  description: |
+    Elected representative for the graduate student body at the University of Waterloo. Managed departmental budgets, facilitated faculty-student communication channels, and organized a series of invited speaker seminars and professional development socials.
