--- a/_data/service.yml
+++ b/_data/service.yml
@@ -6,7 +6,7 @@
 - organization: "The Operations Research Challenge (TORCH)"
   role: "Founder & Competition Chair"
   description: |
-    Founded and directed the University of Waterloo branch of this tri-university high school outreach competition. Oversaw the end-to-end development of contest mathematics, automated validators, and administrative infrastructure. Previously served as a long-term Executive at the University of Toronto branch, designing curriculum to introduce OR concepts to secondary students, in a fun, single-day, collaborative format. Gave out $1000's in prize money. The final competition was called off 3 days before the 2019 event, due to the pandemic, and has remained dormant since.
+    Founded and directed the University of Waterloo branch of this tri-university high school outreach competition. Oversaw the end-to-end development of contest mathematics, automated validators, and administrative infrastructure. Previously served as a long-term Executive at the University of Toronto branch, designing curriculum to introduce OR concepts to secondary students, in a fun, single-day, collaborative format. Oversaw the distribution (as well as raising) 1000's of dollars in prize money. This competition unfortunately went dormant in 2019, after being cancelled due to the pandemic.
 
 - organization: "Conference Service & Digital Design"
   role: "Designer / Volunteer"
