--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,7 +1,7 @@
 - organization: "Scientific Peer Review"
   role: "Technical Reviewer"
   description: |
-    Invited reviewer for international journals and conferences in Operations Research and Healthcare Engineering. Responsible for evaluating the methodological rigor, original contribution, and technical accuracy of submitted manuscripts. Working hard to not be reviewer 2.
+    Invited reviewer for international journals and conferences in Operations Research and Healthcare Engineering. Responsible for evaluating the methodological rigor, original contribution, and technical accuracy of submitted manuscripts. Trying not to be reviewer 2.
   journals:
     - "Medical Physics"
     - "Operations Research Forum"
