--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -14,7 +14,7 @@ y- title: "Robust Proton Therapy Optimization"
   description: "Back in 2012, when I was still in Mechanical Engineering, Yuhin Wu, Ryan Brown, Keith Tong and I spent many a late night at Skule\u2122 building an Arduino-based recycling sorter for ASME's SEC competition (and we won the local competition!)."
   video_id: "6V8QCOc4pq0"
 
-- title: "Large-Scale Network Flows"
+- title: "Combined Imaging Modalities"
   category: "future"
-  description: "Planning to explore implementation of robust counterparts for communication networks."
+  description: "I am passionate about imaging and feel like people are much more transparent than we think. With the current advent of AI and advanced OR techniques, I hope to push for less invasive, more informative imaging protocols in the future. Please contact me if you would like to get started on this type of project!"
   image: ""
