--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,8 +1,21 @@
-y- title: "Robust Proton Therapy Optimization"
+- title: "Robust Proton Therapy"
   category: "active"
-  description: "Investigating the mechanical result of tuning spot weights using polyhedral uncertainty sets."
-  image: "assets/images/proton-therapy.png" # Optional
-  video_id: "" # Optional (YouTube ID like 'dQw4w9WgXcQ')
+  description: "Optimization of spot weights..."
+  gallery:
+    - type: image
+      url: "assets/images/proton-1.jpg"
+    - type: video
+      id: "dQw4w9WgXcQ"  # YouTube ID
+    - type: image
+      url: "assets/images/proton-results-plot.png"
+
+- title: "Simple Map Project"
+  category: "fun"
+  description: "Mapping coordinates..."
+  # You can still use the single format if you're lazy, or convert it to a 1-item gallery:
+  gallery:
+    - type: image
+      url: "assets/images/map.jpg"
   
 - title: "Healthcare Provider Regression Analysis"
   category: "completed"
