--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,13 +1,6 @@
-- title: "Robust Proton Therapy"
+- title: "Geometric Beam Angle Optimization"
   category: "active"
   description: "Optimization of spot weights..."
-  gallery:
-    - type: image
-      url: "assets/images/proton-1.jpg"
-    - type: video
-      id: "dQw4w9WgXcQ"
-    - type: image
-      url: "assets/images/proton-results-plot.png"
 
 - title: "Healthcare Provider Regression Analysis"
   category: "completed"
@@ -31,7 +24,7 @@
   description: "Back in 2013, Krystle Pang, Jaquelyn Monis Rodriguez and I set out to use Arena Simulaton Software to predict the impact of a new terminal rollout at Chicago's O'Hare International Airport. I believe we came in 3rd at the International competition."
   gallery:
     - type: video
-      url: "R1-jtm6Vwp8&t"
+      url: "R1-jtm6Vwp8"
       
 - title: "Recycling Sorter"
   category: "fun"
