--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -50,4 +50,4 @@
 
 - title: "Novel Mixed-Modality Imaging Techniques"
   category: "future"
-  description: "With the current advent of AI and advanced OR techniques, I believe humanity is about to become a lot more transparent. I believe in a future with less invasive, more informative imaging protocols. Please reach out if you would like to collaborate or to know more!"
+  description: "With the current advent of AI and advanced OR techniques, I believe humanity is about to become a lot more transparent. I am interested in studying less invasive, more informative imaging protocols that we have the technology for now, not decades from now. Please reach out if you would like to collaborate or to know more!"
